[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Enemy/RatEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/rat.png" type="Texture" id=3]
[ext_resource path="res://src/Flame/firegradient.tres" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.5, 2.5 )

[sub_resource type="Animation" id=3]
resource_name = "dying"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "run"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 1.2
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 8.0
initial_velocity_random = 0.4
angular_velocity = 30.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 4.0
linear_accel_random = 0.1
angle = 360.0
angle_random = 1.0
color_ramp = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.29943, 5.05223 )

[node name="RatEnemy" instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )
MAX_SPEED = 35

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )
hframes = 7

[node name="Collider" parent="." index="1"]
position = Vector2( 0, -2.5 )
shape = SubResource( 2 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "run"
anims/dying = SubResource( 3 )
anims/run = SubResource( 1 )

[node name="FloorLeft" type="RayCast2D" parent="." index="3"]
position = Vector2( -3.5, 0 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2

[node name="FloorRight" type="RayCast2D" parent="." index="4"]
position = Vector2( 3.5, 0 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2

[node name="WallLeft" type="RayCast2D" parent="." index="5"]
position = Vector2( -3, -2.5 )
enabled = true
cast_to = Vector2( -6, 0 )
collision_mask = 2

[node name="WallRight" type="RayCast2D" parent="." index="6"]
position = Vector2( 3, -2.5 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 2

[node name="Particles2D" type="Particles2D" parent="." index="7"]
emitting = false
amount = 20
lifetime = 0.5
randomness = 1.0
fixed_fps = 24
local_coords = false
process_material = SubResource( 4 )

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( -1.07691, -3.55848 )
shape = SubResource( 5 )

[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]

[editable path="Hurtbox"]
